--- a/Consent_1.2
+++ b/Consent_1.2
@@ -606,6 +606,116 @@
         <div id="EditOverlay" class="overlay">
             <textarea id="Kinks">
 
+#Overarching Consent
+(General)
+* Permanent injury to your character
+* Romancing your character
+* Death of your character
+* Killing another character
+
+#Mental 
+(Offering, Receiving)
+* Amnesia/Memory Loss
+* Animalistic Behavior/Going "Feral"
+* Anxiety/Panic Attacks
+* Brainwashing
+* Coercion
+* Depression
+* Emotional Abuse
+* Gaslighting
+* Grief/Mourning
+* Hallucinations
+* Hypnotism
+* Memory Modification
+* Mental Abuse
+* Mind control
+* Possession/Voidsent
+* Psychosis or Psychotic Breakdowns
+* Stalking
+* Suicide
+* Self Harm
+* Torture (Psychological)
+
+#Physical
+(Offering, Receiving)
+* Acid
+* Being Eaten Alive (Vore)
+* Blood
+* Body Horror (Minor to Moderate)
+* Body Horror (Moderate to Severe)
+* Bodily Fluids (Excluding Blood)
+* Burning/Death by Fire
+* Cannibalism
+* Deep Water
+* Disease/Health
+* Dismemberment
+* Drowning
+* Doppelgangers/Being replaced with a copy
+* Electrocution
+* Eyeballs/Eye Trauma
+* Freezing to death
+* Gore/Guts
+* Hand/Fingernail Trauma
+* Human/Ritual Sacrifice
+* Medical Experimentation
+* Neck and Throat Trauma
+* Non-Consensual Body Modification
+* Paralysis
+* Physical Abuse
+* Scarring
+* Sensory Loss (Sight, Hearing, Touch, Taste, Smell)
+* Sexual Abuse (Men)
+* Sexual Abuse (Women)
+* Sexual Abuse (Other)
+* Starvation
+* Suffocation
+* Tendon/Nerve Injuries
+* Thirst
+* Torture (Physical)
+* Waterboarding
+
+#Phobias & External Factors
+(Offering, Receiving)
+* Bugs and Insects (General)
+* Dolls/Puppets
+* Ghosts/Spirits
+* Harm to Animals
+* Magic (General)
+* Magic (Curses)
+* Necromancy/The Undead/Zombies
+* Needles / Pointed Objects
+* Poison/Venom (Short Term)
+* Poison/Venom (Long Term)
+* Rats
+* Snakes
+* Spiders
+* Small/Enclosed Spaces
+* Voidsent
+
+#Disease & Health
+(Offering, Receiving)
+* Alcohol Abuse/Addiction Issues                
+* Autoimmune diseases (General)/Chronic Disease
+* Cancer or similar diseases
+* Necrosis/Rotting Flesh
+* Parasites
+* Pregnancy
+* Substance Abuse/Addiction Issues (excluding Alcohol)
+
+#Sociopolitical Issues
+(General)
+* Genocide
+* Human Trafficking
+* Plague/Pandemic/Global disease epidemic
+* Prostitution
+* Public Execution
+* Racism (Fantasy)
+* Rape/Sexual Assault
+* Religion (Fantasy)
+* Religious Extremism
+* Sexism
+* Terrorism
+* Xenophobia     
 
             </textarea>
             <button id="KinksOK">Accept</button>
